# Red_5G_2026

./: README.md
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/: Android.bp  Makefile  makedocs.sh  meson.build  meson_options.txt  readme.txt  version.h
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/docs/html/: annotated.html  classes.html  dir_0627bd92ab8c28160ece7b32334ce5f5.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  functions_vars_k.html  functions_vars_l.html  functions_vars_m.html  functions_vars_n.html  functions_vars_o.html  functions_vars_p.html  (+873 more)
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+47 more)
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/qrtr/: Makefile  meson.build  telit_sdk_qrtr.c  telit_sdk_qrtr.h
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/qrtr/examples/: Makefile  meson.build  qrtr_dms_get_device_rev_id.c  qrtr_nas_indication.c
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/sdk/: Makefile  log.c  make.bat  meson.build  strlcpy.c  telit_sdk.h  telit_sdk_atr.c  telit_sdk_atr.h  telit_sdk_cat.c  telit_sdk_cat.h  telit_sdk_core.c  telit_sdk_ctl.c  telit_sdk_ctl.h  telit_sdk_dms.c  telit_sdk_dms.h  telit_sdk_dpm.c  telit_sdk_dpm.h  telit_sdk_fota.c  telit_sdk_fota.h  telit_sdk_gas.c  telit_sdk_gas.h  telit_sdk_gms.c  telit_sdk_gms.h  telit_sdk_loc.c  telit_sdk_loc.h  telit_sdk_nas.c  telit_sdk_nas.h  telit_sdk_private.h  telit_sdk_private_atr.h  telit_sdk_private_cat.h  telit_sdk_private_ctl.h  telit_sdk_private_dms.h  telit_sdk_private_dpm.h  telit_sdk_private_fota.h  telit_sdk_private_gas.h  telit_sdk_private_gms.h  telit_sdk_private_loc.h  telit_sdk_private_nas.h  telit_sdk_private_qos.h  telit_sdk_private_tmd.h  (+25 more)
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/sdk/examples/: Makefile  ctl_get_client_id  ctl_get_client_id.c  ctl_get_version_info  ctl_get_version_info.c  ctl_release_client_id  ctl_release_client_id.c  dms_get_fw_revision  dms_get_fw_revision.c  meson.build
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/sdk/gobiusbnet_examples/: dms_get_band_capability.c  dms_get_device_caps.c  dms_get_firmware_revision.c  dms_get_hardware_revision.c  dms_get_model_id.c  dms_get_operating_mode.c  dms_get_serial_numbers.c  dms_get_time.c  dms_get_voice_number.c  dms_set_event_report.c  dms_set_operating_mode.c  loc_delete_assist_data.c  loc_event_register.c  loc_position_indication.c  loc_set_nmea_types.c  loc_set_operation_mode.c  loc_start.c  loc_stop.c  meson.build  nas_get_cell_location_info.c  nas_get_lte_cphy_ca_info.c  nas_get_plmn.c  nas_get_rf_info.c  nas_get_serving_system_info.c  nas_get_signal_info.c  nas_get_signal_strength.c  nas_get_sys_info.c  nas_get_system_selection_pref.c  nas_get_technology_preference.c  nas_get_tx_rx_info.c  nas_indication_register.c  nas_network_scan.c  nas_set_event_report.c  nas_set_system_selection_preference.c  uim_change_pin.c  uim_get_card_status.c  uim_get_slot_status.c  uim_read_record.c  uim_set_event_report.c  uim_set_pin_protection.c  (+24 more)
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/sdk/mock_tests/: Makefile  dms_modem_activity_info_ind.c  gms_nas_get_modem_status.c  meson.build  nas_get_nr5g_rrc_utc_time.c  nas_nr5g_lost_frame_sync_ind.c  nas_nr5g_time_sync_pulse_report_ind.c  wds_get_runtime_settings.c  wms_memory_full_ind.c
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/test_helpers/: Makefile  meson.build  telit_sdk_test_helpers.c  telit_sdk_test_helpers.h
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/tqcm/: Makefile  meson.build  tqcm.h  tqcm_atr.c  tqcm_atr.h  tqcm_cat.c  tqcm_cat.h  tqcm_core.c  tqcm_ctl.c  tqcm_ctl.h  tqcm_dispatcher.c  tqcm_dms.c  tqcm_dms.h  tqcm_dpm.c  tqcm_dpm.h  tqcm_fota.c  tqcm_fota.h  tqcm_gas.c  tqcm_gas.h  tqcm_gms.c  tqcm_gms.h  tqcm_loc.c  tqcm_loc.h  tqcm_nas.c  tqcm_nas.h  tqcm_private.h  tqcm_uim.c  tqcm_uim.h  tqcm_voice.c  tqcm_voice.h  tqcm_wda.c  tqcm_wda.h  tqcm_wds.c  tqcm_wds.h  tqcm_wms.c  tqcm_wms.h
Guia_5G/Modem_telit_fn990/telit_qmi_sdk-1.11.17-0/telit_qmi_sdk/tqcm/examples/: Makefile  atr_cmd_send.c  cat_get_cached_proactive_cmd.c  cat_get_configuration.c  cat_set_event_report.c  context_creation.c  dms_device_power_info.c  dms_get_band_caps.c  dms_get_device_cap.c  dms_get_device_cap_async.c  dms_get_device_serial_numbers.c  dms_get_fw_revision.c  dms_get_hw_revision.c  dms_get_mfr.c  dms_get_model_id.c  dms_get_msisdn.c  dms_get_operating_mode.c  dms_get_time.c  dms_indication.c  dms_modem_activity_info.c  dms_set_operating_mode.c  error_cb.c  fota_oem_att_get_host_odis.c  fota_oem_att_set_host_odis.c  fota_oem_ftp_get_server_info.c  fota_oem_ftp_get_session_info.c  fota_oem_ftp_get_settings.c  fota_oem_ftp_send_selection.c  fota_oem_ftp_set_event_report.c  fota_oem_ftp_set_server_info.c  fota_oem_ftp_set_settings.c  fota_oem_ftp_start_session.c  fota_oem_ftp_stop_session.c  gas_dms_active_fw.c  gas_dms_clear_fw.c  gas_dms_errgen.c  gas_dms_get_crash_action.c  gas_dms_get_crash_info.c  gas_dms_get_fw.c  gas_dms_get_host_fwver.c  (+130 more)
(+272 files in other folders)
