examples = [
  'dms_get_band_capability.c',
  'dms_get_device_caps.c',
  'dms_get_firmware_revision.c',
  'dms_get_hardware_revision.c',
  'dms_get_model_id.c',
  'dms_get_operating_mode.c',
  'dms_get_serial_numbers.c',
  'dms_get_time.c',
  'dms_get_voice_number.c',
  'dms_set_event_report.c',
  'dms_set_operating_mode.c',
  'loc_delete_assist_data.c',
  'loc_event_register.c',
  'loc_position_indication.c',
  'loc_set_nmea_types.c',
  'loc_set_operation_mode.c',
  'loc_start.c',
  'loc_stop.c',
  'nas_get_cell_location_info.c',
  'nas_get_lte_cphy_ca_info.c',
  'nas_get_plmn.c',
  'nas_get_rf_info.c',
  'nas_get_serving_system_info.c',
  'nas_get_signal_info.c',
  'nas_get_signal_strength.c',
  'nas_get_sys_info.c',
  'nas_get_system_selection_pref.c',
  'nas_get_technology_preference.c',
  'nas_get_tx_rx_info.c',
  'nas_indication_register.c',
  'nas_network_scan.c',
  'nas_set_event_report.c',
  'nas_set_system_selection_preference.c',
  'uim_change_pin.c',
  'uim_get_card_status.c',
  'uim_get_slot_status.c',
  'uim_read_record.c',
  'uim_set_event_report.c',
  'uim_set_pin_protection.c',
  'uim_switch_slot.c',
  'uim_unblock_pin.c',
  'uim_verify_pin.c',
  'wds_bind_mux_data_port.c',
  'wds_create_profile.c',
  'wds_delete_profile.c',
  'wds_get_duration.c',
  'wds_get_packet_service_status.c',
  'wds_get_packet_statistics.c',
  'wds_get_profile_settings.c',
  'wds_get_runtime_settings.c',
  'wds_modify_profile.c',
  'wds_session_state_ind.c',
  'wds_set_event_report.c',
  'wds_set_ip_family.c',
  'wds_start_data_session.c',
  'wds_stop_network.c',
  'wms_delete.c',
  'wms_event_indication.c',
  'wms_list_messages.c',
  'wms_modify_tag.c',
  'wms_raw_read.c',
  'wms_raw_send.c',
  'wms_set_event_report.c',
]

foreach src: examples
  name = src.split('.')[0]
  exe = executable(
    name,
    src,
    c_args: ['-D_GNU_SOURCE'],
    include_directories:include_directories(['../../sdk']),
    link_with: libtelitSDK)
endforeach

