srcs = [
  'atr_cmd_send.c',
  'context_creation.c',
  'dms_device_power_info.c',
  'dms_get_band_caps.c',
  'dms_get_device_cap_async.c',
  'dms_get_device_cap.c',
  'dms_get_device_serial_numbers.c',
  'dms_get_fw_revision.c',
  'dms_get_hw_revision.c',
  'dms_get_mfr.c',
  'dms_get_model_id.c',
  'dms_get_msisdn.c',
  'dms_get_operating_mode.c',
  'dms_get_time.c',
  'dms_indication.c',
  'dms_modem_activity_info.c',
  'dms_set_operating_mode.c',
  'error_cb.c',
  'fota_oem_att_get_host_odis.c',
  'fota_oem_att_set_host_odis.c',
  'fota_oem_ftp_get_server_info.c',
  'fota_oem_ftp_get_session_info.c',
  'fota_oem_ftp_get_settings.c',
  'fota_oem_ftp_send_selection.c',
  'fota_oem_ftp_set_event_report.c',
  'fota_oem_ftp_set_server_info.c',
  'fota_oem_ftp_set_settings.c',
  'fota_oem_ftp_start_session.c',
  'fota_oem_ftp_stop_session.c',
  'gas_dms_active_fw.c',
  'gas_dms_clear_fw.c',
  'gas_dms_errgen.c',
  'gas_dms_get_crash_action.c',
  'gas_dms_get_crash_info.c',
  'gas_dms_get_fw.c',
  'gas_dms_get_host_fwver.c',
  'gas_dms_get_oem_fwver.c',
  'gas_dms_get_reset_info.c',
  'gas_dms_get_usb_cfg.c',
  'gas_dms_get_usb_ext.c',
  'gas_dms_get_usb_switch.c',
  'gas_dms_reset_info_ind_reg.c',
  'gas_dms_set_crash_action.c',
  'gas_dms_set_usb_cfg.c',
  'gas_dms_set_usb_ext.c',
  'gas_dms_set_usb_switch.c',
  'gas_log_set_redirect.c',
  'gas_psm_get_wdisa_cfg.c',
  'gas_psm_set_wdisa_cfg.c',
  'gms_dms_clr_dying_gasp_stat.c',
  'gms_dms_fwswitch_info_ex.c',
  'gms_dms_get_cust_features.c',
  'gms_dms_get_dying_gasp_cfg.c',
  'gms_dms_get_dying_gasp_stat.c',
  'gms_dms_get_mtu.c',
  'gms_dms_get_pc_info.c',
  'gms_dms_set_cust_features.c',
  'gms_dms_set_dying_gasp_cfg.c',
  'gms_dms_set_mtu.c',
  'gms_loc_get_acq_position.c',
  'gms_loc_get_auto_start.c',
  'gms_loc_get_gnss_session.c',
  'gms_loc_set_auto_start.c',
  'gms_loc_set_gnss_session.c',
  'gms_loc_set_nmea_type.c',
  'gms_nas_get_band_cap.c',
  'gms_nas_get_endc_ca_info.c',
  'gms_nas_get_ltecqi_info.c',
  'gms_nas_get_lte_scc_rx_info.c',
  'gms_nas_get_mccblock.c',
  'gms_nas_get_nr5g_ca_info.c',
  'gms_nas_ind_register.c',
  'gms_nas_modem_status.c',
  'gms_nas_set_mccblock.c',
  'gms_wds_3gpp_config_item_get.c',
  'gms_wds_3gpp_config_item_set.c',
  'gms_wds_create_profile.c',
  'gms_wds_preserved_apn_backup.c',
  'loc_delete_assist_data.c',
  'loc_demo.c',
  'loc_event_register.c',
  'loc_inject_position.c',
  'loc_inject_utc_time.c',
  'loc_register_master_client.c',
  'loc_set_nmea_types.c',
  'loc_set_operation_mode.c',
  'loc_start.c',
  'loc_stop.c',
  'nas_config_sig_info2.c',
  'nas_get_cell_location_info.c',
  'nas_get_home_network.c',
  'nas_get_lte_cphy_info.c',
  'nas_get_nr5g_rrc_utc_time.c',
  'nas_get_plmn_name.c',
  'nas_get_rf_band_info.c',
  'nas_get_serving_system.c',
  'nas_get_sig_info.c',
  'nas_get_signal_strength.c',
  'nas_get_sys_info.c',
  'nas_get_system_selection_preference.c',
  'nas_get_tech_preference.c',
  'nas_get_tx_rx_info.c',
  'nas_indication_register.c',
  'nas_limit_sys_info_ind_reporting.c',
  'nas_network_scan.c',
  'nas_nr5g_indications.c',
  'nas_set_event_report.c',
  'nas_set_preferred_networks.c',
  'nas_set_system_selection_preference.c',
  'nas_sys_info_indication.c',
  'startup.c',
  'uim_change_pin.c',
  'uim_get_card_status.c',
  'uim_get_slots_status.c',
  'uim_power_down.c',
  'uim_power_up.c',
  'uim_read_transparent.c',
  'uim_set_event_report.c',
  'uim_set_pin_protection.c',
  'uim_switch_slot.c',
  'uim_unblock_pin.c',
  'uim_verify_pin.c',
  'voice_answer_call.c',
  'voice_burst_dtmf.c',
  'voice_dial_call.c',
  'voice_end_call.c',
  'voice_get_all_call_info.c',
  'voice_get_call_barring.c',
  'voice_get_call_forwarding.c',
  'voice_get_call_waiting.c',
  'voice_get_clip.c',
  'voice_get_clir.c',
  'voice_indications.c',
  'voice_set_call_barring_password.c',
  'voice_set_sups_service.c',
  'voice_set_sups_service_forwarding.c',
  'voice_start_stop_cont_dtmf.c',
  'wda_get_data_format.c',
  'wda_set_data_format.c',
  'wds_bind_mux_data_port.c',
  'wds_create_profile.c',
  'wds_delete_profile.c',
  'wds_get_duration.c',
  'wds_get_packet_service_status.c',
  'wds_get_packet_statistics.c',
  'wds_get_profile_list.c',
  'wds_get_profile_settings.c',
  'wds_indication_register.c',
  'wds_modify_profile.c',
  'wds_set_event_report.c',
  'wds_set_ip_family_preference.c',
  'wds_set_lte_attach_pdn_list.c',
  'wds_start_network.c',
  'wds_stop_network.c',
  'wms_get_smsc_address.c',
  'wms_indications.c',
  'wms_list_messages.c',
  'wms_modify_tag.c',
  'wms_set_routes.c',
  'wms_set_smsc_address.c',
]

foreach src : srcs
  name = src.split('.')[0]
  exe = executable(
    name,
    src,
    dependencies: [libtqcm_dep, libtesthelpers_dep])
endforeach

subdir('data_connection_example')
subdir('multiple_rmnet_example')
